--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,6 +7,7 @@
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher"
+        android:roundIcon="@mipmap/ic_launcher_round"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/Theme.QuizApp"
@@ -16,9 +17,6 @@
             android:exported="false" />
         <activity
             android:name=".QuizQuestionsActivity"
-            android:exported="false" />
-        <activity
-            android:name=".QuizQuestionActivity"
             android:exported="false" />
         <activity
             android:name=".MainActivity"
